frontend/src/pages/stylesheets/capture.css
#display {
  position: fixed; /* changed from absolute to fixed */
  box-sizing: border-box; /* fixed the height issue */
  top: 0; /* position from the top */
  left: 0; /* position from the left */

  /* occupy the whole screen */
  min-height: 100vh;
  min-width: 100vw;

  /* show the display */
  display: block;

  /* prevent the display from being clipped */
  overflow-y: auto;

  /* center the wrapper */
  display: flex;
  justify-content: center;
  align-items: center;
}

#preview-wrapper {
  /* 20px padding around the side */
  width: calc(100% - 40px);
}

#preview {
  position: absolute;
  width: inherit;
  max-height: 100vh;
  transform: translateY(-50%);
  top: 50%;
}

#spacer {
  padding: 70px 0;
  overflow: scroll;
  max-width: 500px;
  min-width: 200px;
  margin-left: auto;
  margin-right: auto;
}

#preview #contents {
  width: 100%;
  max-width: 500px;
}

#preview img {
  max-width: 500px;
  width: 100%;
  height: 100%;
  border: none;
  border-radius: 10px;
}

#previewButtons {
  height: 35px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 10px;
  font-size: 12px;
  font-weight: 700;
  color: black;
  overflow: visible;
}

#previewButtons .element {
  background-color: #00dca5;
  border: none;
  border-radius: 36px;
  padding: 10px 20px;
  display: flex;
  align-items: center;
  height: 15px;
}

#previewButtons .like {
  justify-content: center;
}

#previewButtons .element img {
  width: 15px;
  height: 15px;
  margin-right: 5px;
}

#previewButtons .share.element img {
  margin-right: 0px;
}

#previewButtons .share.element {
  background-color: whitesmoke;
}

#previewButtons .location {
  width: 100%;
  margin: 0 10px;
}

#previewPlaceholder {
  display: flex;
  justify-content: center;
  align-items: center;
  aspect-ratio: 16/9;
  text-align: center;
  border: black 1px dashed;
  border-radius: 10px;
  color: black;
}

#preview #form {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
}

#preview #form input {
  /* make the input field take up the whole width */
  width: 100%;

  /* styles */
  font-size: 16px;
  border: none;
  border-radius: 100px;
  padding: 13px 21px;
  font-weight: 700;
  color: black;
  background-color: #e7e7e7;
  margin-bottom: 20px;

  /* make the form start from the left */
  box-sizing: border-box;

  /* Remove the red border when selected */
  outline: none;
}

